syntax = "proto3";


option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 商品销售类型
enum EItemSalesType {
  IT_NORMAL = 0;
  IT_WHOLESALE = 1;
}

message SkuId {
  int64 itemId = 1;
  int64 skuId = 2;
}

message GetItemsByLabelRequest {
  string label = 1;
  string sortBy = 2;
  int64 begin = 3;
  int64 end = 4;
}

message PagingGoodsResponse {
  int64 total = 1;
  repeated SUnifiedViewItem data = 2;
}

// 保存商品请求
message GetItemRequest {
  // 商品编号
  int64 itemId = 1;
}

// 获取商品请求
message GetItemsRequest {
  int64 categoryId = 1;
  int64 begin = 2;
  int64 end = 3;
  // 是否随机
  bool random = 4;
  string where = 5;
}

// 简单的商品信息
message SGoods {
  int64 itemId = 1;
  int64 productId = 2;
  int64 vendorId = 3;
  int64 shopId = 4;
  int32 categoryId = 5;
  // 标题
  string title = 6;
  string shortTitle = 7;
  // 货号
  string goodsNo = 8;
  string image = 9;
  //定价
  int64 originPrice = 10;
  //销售价
  int64 price = 11;
  // 促销价
  int64 promPrice = 12;
  // 价格区间
  string priceRange = 13;
  int64 goodsId = 14;
  int64 skuId = 15;
  // 商品标志
  int32 itemFlag = 17;
  // 库存
  int32 stockNum = 18;
  // 已售件数
  int32 saleNum = 19;
  // 品牌编号
  int64 brandId = 20;
  // 商品编码
  string code = 21;
}


/** 产品属性 */
message SAttr {
  // 编号
  int64 id = 1;
  // 属性编号
  int64 attrId = 2;
  // 属性值
  string attrData = 3;
  // 属性文本
  string attrWord = 4;
}


/** SKU */
message SSku {
  int64 skuId = 1;
  int64 itemId = 2;
  int64 productId = 3;
  string title = 4;
  string image = 5;
  string specData = 6;
  string specWord = 7;
  string code = 8;
  int64 originPrice = 9;
  int64 price = 10;
  int64 cost = 11;
  int32 weight = 12;
  int32 bulk = 13;
  int32 stock = 14;
  int32 saleNum = 15;
}

// 保存商品请求
message SaveItemRequest {
  int64 itemId = 1;
  int64 productId = 2;
  int64 vendorId = 3;
  int64 shopId = 4;
  int64 categoryId = 5;
  // 标题
  string title = 6;
  string shortTitle = 7;
  // 货号
  string goodsNo = 8;
  // 图片
  repeated string images = 9;
  // 视频介绍
  string introVideo = 10;
  //定价
  int64 originPrice = 11;
  // 成本
  int64 cost = 12;
  //销售价
  int64 price = 13;
  // 促销价
  int64 promPrice = 14;
  // 价格区间
  string priceRange = 15;
  int64 goodsId = 16;
  int64 skuId = 17;
  // 库存
  int32 stockNum = 18;
  // 已售件数
  int32 saleNum = 19;
  // 促销标志
  SItemFlagData flagData = 20;
  
  //todo: 对比SGoods多出的字段
  sint64 brandId = 21;
  string code = 22;
  int64 expressTid = 23;
  repeated SSku skuArray = 24;
  repeated SLevelPrice levelPrices = 25;

  // 商品购物保障
	int32	safeguardFlag = 26;
}

// 商品数据响应
message SItemDataResponse {
  // 商品编号
  int64 itemId = 1;
  // 产品编号
  int64 productId = 2;
  // 供货商编号
  int64 vendorId = 3;
  // 店铺编号
  int64 shopId = 4;
  // 分类编号
  int64 categoryId = 5;
  // 标题
  string title = 6;
  // 副标题
  string shortTitle = 7;
  // 视频介绍
  string introVideo = 8;
  // 货号
  string goodsNo = 9;
  // 主图
  string thumbnail = 10;
  // 图片
  repeated string images = 11;
  // 成本价
  int64 cost = 12;
  // 建议零售价
  int64 originPrice = 13;
  // 销售价
  int64 price = 14;
  // 价格区间
  string priceRange = 15;
  // SkuId
  int64 skuId = 16;
  // 促销标志
  int32 itemFlag = 17;
  // 库存
  int32 stockNum = 18;
  // 已售件数
  int32 saleNum = 19;
  // 上架状态
  int32 shelveState = 20;
  // 审核状态
  int32 reviewStatus = 21;
  // 审核意见
  string reviewRemark = 22;

  //todo: 对比SGoods多出的字段
  // 品牌编号
  int64 brandId = 23;
  // 商品编码
  string code = 24;
  // 运费模板
  int64 expressTid = 25;
  // 商品属性
  repeated SAttr attrArray = 26;
  // Sku数据
  repeated SSku skuArray = 27;
  // 规格
  repeated SSpecOption specOptions = 28;
  // 商品标志数据
  SItemFlagData flagData = 29;
  // 会员价
  repeated SLevelPrice levelPrices = 30;
  // 商品购物保障
	int32	safeguardFlag = 31;
}

// 商品标志枚举
enum EItemFlag{
  _EItemFlag = 0;
  	// 自营商品
	SelfSales = 1;
	// 免邮
	FreeDelivery = 2;
	// 推荐商品
	Recommend = 4;
  	// 积分兑换商品
	Exchange = 8;
	// 赠品
	Gift = 16;
	// 分销商品
	Affiliate = 32;
	// 新品
	NewOnShelve = 64;
	// 热销商品
	HotSales = 128;
	// 平台配送
	SelfDelivery = 256;
}

// 商品标志
message SItemFlagData{
  // 新品
	bool isNewOnShelve = 1;
	// 热销商品
	bool isHotSales = 2;
	// 推荐商品
	bool isRecommend = 3;
  // 是否允许兑换
  bool isExchange = 4;
	// 赠品
	bool isGift = 5;
  // 是否分销
  bool isAffiliate = 6;
  // 自营商品
	bool isSelfSales = 7;
	// 免邮
	bool isFreeDelivery = 8;
	// 平台配送
	bool isSelfDelivery = 9;
}

// 统一的商品显示对象
message SUnifiedViewItem {
  int64 itemId = 1;
  int64 productId = 2;
  int64 vendorId = 3;
  int64 shopId = 4;
  int64 categoryId = 5;
  // 标题
  string title = 6;
  string shortTitle = 7;
  // 货号
  string goodsNo = 8;
  // 图片
  string image = 9;
  // 图片
  repeated string images = 10;
  // 定价
  int64 originPrice = 11;
  // 销售价
  int64 price = 12;
  // 促销价
  int64 promPrice = 13;
  // 价格区间
  string priceRange = 14;
  int64 goodsId = 15;
  int64 skuId = 16;
  // 商品标志
  int32 itemFlag = 18;
  // 库存
  int32 stockNum = 19;
  // 已售件数
  int32 saleNum = 20;
  // 标志数据
  SItemFlagData flagData = 21;
  //todo: 对比SGoods多出的字段
  sint64 brandId = 22;
  string code = 23;
  int64 expressTid = 24;
  sint32 shelveState = 25;
  sint32 reviewStatus = 26;
  sint64 updateTime = 27;
  repeated SSku skuArray = 28;
  repeated SLevelPrice levelPrices = 29;
  
  SItemViewData viewData = 30;
  map<string, string> data = 31;
}


message SItemViewData {
  // 商品详情
  string details = 1;
  // 缩略图
  repeated string thumbs = 2;
  // 产品图片
  repeated string images = 3;
  // SKU选择HTML
  string skuHtml = 4;
  // SKU JSON数据
  string skuJson = 5; //todo: 删除?
}

// 保存商品响应
message SaveItemResponse {
  // 错误状态码,如为0表示成功
  sint32 errCode = 1;
  // 消息
  string errMsg = 2;
  // 商品编号
  int64 itemId = 3;
  // 商品标志
  int32 itemFlag = 4;
}


message ItemLabelListResponse {
  repeated SItemLabel value = 1;
}

// 销售标签
message SItemLabel {
  int32 id = 1;
  // 标签名
  string name = 2;
  // 标签代码
  string tagCode = 5;
  // 商品的遮盖图
  string labelImage = 3;
  // 是否启用
  bool enabled = 4;
}

// 商品和快照请求
message GetItemAndSnapshotRequest{
  // 商品编号
  int64 itemId = 1;
  // 是否请求快照
  bool snapshot = 2;
  // 是否选择
  bool returnSkuHtml = 3;
  // 是否返回SkuJson
  bool returnSkuJson = 4;
}

// 商品快照(针对商品)
message ItemSnapshotResponse {
  // 商品编号
  int64 itemId = 1;
  // 商品编码
  string code = 2;
  // 产品编号
  int64 productId = 3;
  // 分类编号
  int64 categoryId = 4;
  // 供货商编号
  int64 vendorId = 5;
  // 店铺编号
  int64 shopId = 7;
  // 编号
  int64 brandId = 6;
  // 编号分类编号
  int64 shopCatId = 8;
  // 运费模板
  int64 expressTid = 9;
  // 商品标题
  string title = 11;
  // 短标题
  string shortTitle = 12;
  // 产品编码
  string productCode = 13;
  // 商品图片
  repeated string images = 14;
  // 价格区间
  string priceRange = 16;
  // 默认SKU
  int64 skuId = 17;
  // 售价
  int64 price = 18;
  // 零售价
  int64 originPrice = 19;
  // 库存数量
  int32 stockNum = 20;
  // 已销售数量
  int32 saleNum = 21;
  // 商品详情
  string description = 22;
  // 商品属性
  repeated SAttrValue attrArray = 23;
  // SKU
  repeated SSku skuArray = 24;
  // 规格
  repeated SSpecOption specOptions = 25;
  // SkuJson
  string skuJson = 26;
  // 商品标志数据
  SItemFlagData flagData = 27;
  // 会员价
  repeated SLevelPrice levelPrices = 28;
  // 视频介绍
  string introVideo = 29;
  // 商品购物保障
	int32	safeguardFlag = 30;
  // 返回Sku-HTML
  string skuHtml = 31;
}

/** 产品属性值(用于展示详情) */
message SAttrValue{
  // 属性编号
  int64 attrId = 2;
  // 属性名称
  string attrName = 3;
  // 属性文本
  string attrValue = 4;
}

// 商品模型规格
message SSpecOption {
  // 规格名称
  string name = 1;
  // 规格项
  repeated SSpecOptionItem items = 2;
}

// 商品规格项
message SSpecOptionItem {
  string label = 1;
  // 规格项值
  string value = 2;
  // 规格项颜色
  string color = 3;
}

// 商品交易快照(针对商品)
message STradeSnapshot {
  //快照编号
  int64 id = 1;
  // 商品编号
  int64 itemId = 2;
  //商品SKU编号
  int64 skuId = 3;
  //快照编码: 商户编号+g商品编号+快照时间戳
  string snapshotKey = 4;
  // 卖家编号
  int64 sellerId = 5;
  // 卖家名称
  string sellerName = 6;
  //商品标题
  string title = 7;
  //货号
  // GoodsNo string `db:"goods_no"`
  // 产品编码
  string productCode = 8;
  //SKU
  string sku = 9;
  //图片
  string image = 10;
  //销售价
  int64 price = 11;
  // 快照时间
  int64 createTime = 12;
}

// 会员价
message SLevelPrice {
  // 编号
  int64 id = 1;
  // 等级
  int32 level = 2;
  // 价格
  int64 price = 3;
  // 限购数量,-1为不限制
  int32 maxNumber = 4;
  // 是否启用
  bool enabled = 5;
}

// 获取Sku商品信息
message ItemBySkuRequest {
  // 商品编号
  int64 productId = 1;
  // Sku编号
  int64 skuId = 2;
  // 是否返回额外的信息
  bool extra = 3;
}

message ItemIllegalRequest {
  int64 itemId = 1;
  string remark = 2;
}

// 商品回收请求
message RecycleItemRequest{
  // 商品编号
  int64 ItemId = 1;
  // 是否回收或从回收站中撤销
  bool Recycle = 2;
  // 是否销毁
  bool IsDestory = 3;
}

message ItemReviewRequest {
  int64 itemId = 1;
  bool pass = 2;
  string remark = 3;
}

message SaveLevelPriceRequest {
  int64 itemId = 1;
  repeated SLevelPrice value = 2;
}

message ShelveStateRequest {
  EItemSalesType itemType = 3;
  int64 itemId = 2;
  bool shelveOn = 4;
  string remark = 5;
}

message SWsSkuPriceListResponse {
  repeated SWsSkuPrice value = 1;
}

message SaveSkuPricesRequest {
  int64 itemId = 1;
  int64 skuId = 2;
  repeated SWsSkuPrice value = 3;
}

// 商品批发价
message SWsSkuPrice {
  // 编号
  int64 id = 1;
  // 需要数量以上
  int32 requireNum = 2;
  // 批发价
  int64 wholesalePrice = 3;
}

message SWsItemDiscountListResponse {
  repeated SWsItemDiscount value = 1;
}
message GetWsDiscountRequest {
  // 商品编号
  int64 itemId = 1;
  // 买家分组编号
  int64 groupId = 2;
}

message SaveItemDiscountRequest {
  int64 itemId = 1;
  int64 groupId = 2;
  repeated SWsItemDiscount value = 3;
}
// 批发商品折扣
message SWsItemDiscount {
  // 编号
  int64 id = 1;
  // 客户分组
  int64 buyerGroupId = 2;
  // 要求金额，默认为0
  int64 requireAmount = 3;
  // 折扣率
  int64 discountRate = 4;
}
